# owl2shacl

./: Cargo.lock.license  Cargo.toml  README.md
src/: config.rs  convert.rs  main.rs  vocab.rs
