# SPDX-FileCopyrightText: 2024 Robin Vobruba <hoijui.quaero@gmail.com>
#
# SPDX-License-Identifier: Unlicense

[package]
name = "owl2shacl"
version = "0.1.0"
license = "AGPL-3.0-or-later"
authors = ["Robin Vobruba <hoijui.quaero@gmail.com>"]
description = """
    A CLI tool that tries to convert simple OWL ontologies into SHACL shapes.
    OWL ontologies define logical relationships.
    SHACL shapes define a data scheme, and allow to validate data against them.
    Striclty speaking, as these are different things,
    such a conversion is thus illegal/wrong in the ideological/theoretical sense.
    Thus this tool is not generally applicable, but only under the sircumstance,
    that the OWL ontolog is actually written as a data specification -
    if it is understood as a kind of distributed database schema,
    rather then for logical inference.
    Not only that, but it also has to conform to certain, very narrow rules,
    and only a few basic properties are translated into SHACL;
    the rest is ignored.
    """
repository = "https://github.com/hoijui/owl2shacl"
homepage = "https://github.com/hoijui/owl2shacl"
keywords = ["cli", "ci", "utility", "parsing", "git"]
categories = ["command-line-utilities", "filesystem", "text-processing"]
readme = "README.md"
edition = "2021"

[lints.rust]
rust_2021_compatibility = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
wildcard_enum_match_arm = "warn"
string_slice = "warn"
indexing_slicing = "warn"
clone_on_ref_ptr = "warn"
try_err = "warn"
shadow_reuse = "allow"
empty_structs_with_brackets = "warn"
else_if_without_else = "warn"
use_debug = "warn"
print_stdout = "warn"
print_stderr = "warn"
#default_trait_access = "allow"
option_if_let_else = "allow"

[dependencies]
# casey = "0.4"
clap = { version = "4.4", features = ["cargo", "derive"] }
const_format = "0.2"
enum-map = "2.7"
env_logger = "0.11"
lazy_static = "1.4"
log = "0.4"
once_cell = "1.19"
oxigraph = "0.3"
strum = "0.26"
strum_macros = "0.26"
thiserror = "1.0"
